--- a/ArchiveFiles.xaml
+++ b/ArchiveFiles.xaml
@@ -1,41 +1,72 @@
 ﻿<Window x:Class="Twitter_Archive_Eraser.ArchiveFiles"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Select Archive Files" Height="615.751" Width="761.09" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
+        Title="Select Twitter Archive File" 
+        Height="615" 
+        Width="700" 
+        ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
         Closed="Window_Closed_1">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="226"/>
-            <RowDefinition/>
+            <RowDefinition Height="175"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="60"/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0">
-            <StackPanel Margin="20">
+            <StackPanel Margin="20 20 20 10">
                 <TextBlock FontSize="36" >Step 2</TextBlock>
-                <TextBlock FontSize="18" Margin="20 0" TextWrapping="Wrap">• Download your twitter archive from: 
+                <TextBlock FontSize="18" Margin="20 0" TextWrapping="Wrap">• Download your Twitter archive from: 
                     <Hyperlink NavigateUri="https://twitter.com/settings/account" 
                            RequestNavigate="Hyperlink_RequestNavigate"> 
                         https://twitter.com/settings/account
                     </Hyperlink>
-                    .
                 </TextBlock>
-                <TextBlock FontSize="18" Margin="20 0">• Select the files which contain the tweets you wish to delete.</TextBlock>
-                <StackPanel Orientation="Horizontal" Margin="20 0">
-                    <TextBlock FontSize="18">• The files are located in</TextBlock>
-                    <TextBlock FontSize="18" FontStyle="Italic" Margin="5 0 0 0"> [Your twitter archive path]</TextBlock>
-                    <TextBlock FontSize="18" FontWeight="Bold">\data\js\tweets.</TextBlock>
-                </StackPanel>
-                <TextBlock FontSize="18" Margin="50 0 0 0">For example, the file "2013_01.js" contains all the tweets of January 2013.</TextBlock>
+                <TextBlock FontSize="18" Margin="20 0" TextWrapping="Wrap">• Select the tweets to erase from each month below
+                </TextBlock>
             </StackPanel>
             <StackPanel Margin="0" Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Name="btnAddFiles" Width="140" FontSize="18" Click="btnAddFiles_Click">Add files</Button>
-                <Button Name="btnRemoveFiles" Width="140" FontSize="18" Margin="30 0" Height="30" Click="btnRemoveFiles_Click">Remove selected</Button>
+                <Button Name="btnAddFiles" Padding="25 5" FontSize="26" Click="btnAddFiles_Click"
+                        ToolTip="You can add multiple *.zip archive files or *.js files">Load/add Twitter archive files</Button>
             </StackPanel>
             </StackPanel>
+
+        <Grid Grid.Row="1" Margin="10">
+        <CheckBox HorizontalAlignment="Left" 
+                    Checked="SelectAllCheckBox_Checked" 
+                    Unchecked="SelectAllCheckBox_UnChecked"
+                    IsChecked="False" 
+                  FontSize="14">Select all / Select none</CheckBox>
         
-            <DataGrid Name="gridFiles" Grid.Row="1" Margin="10"
-                      
+        <TreeView Name="treeFiles" Margin="0 20 0 0">
+            
+            <TreeView.ItemContainerStyle>
+                <Style TargetType="{x:Type TreeViewItem}">
+                    <Setter Property="IsExpanded" Value="True"/>
+                </Style>
+            </TreeView.ItemContainerStyle>
+            <TreeView.ItemTemplate>
+                <HierarchicalDataTemplate ItemsSource="{Binding TweetJsFiles}">
+                    <TextBlock Text="{Binding Year}" FontSize="16" FontWeight="Bold" />
+
+                    <HierarchicalDataTemplate.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <CheckBox IsChecked="{Binding Path=Selected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                          HorizontalAlignment="Left"
+                                          VerticalAlignment="Center"
+                                          Margin="0 0 5 0"/>
+                                <TextBlock Text="{Binding FriendlyFilename}" FontSize="14" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </HierarchicalDataTemplate.ItemTemplate>
+                    
+                </HierarchicalDataTemplate>
+            </TreeView.ItemTemplate>
+            
+        </TreeView>
+        </Grid>
+        <!--<DataGrid Name="gridFiles" Grid.Row="1" Margin="10"
                       AutoGenerateColumns="False" 
                       CanUserResizeColumns="False"
                       IsReadOnly="True"
@@ -45,10 +76,7 @@
             <DataGrid.Columns>
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.Header>
-                        <CheckBox HorizontalAlignment="Center" 
-                                      Checked="SelectAllCheckBox_Checked" 
-                                      Unchecked="SelectAllCheckBox_UnChecked"
-                                      IsChecked="False"></CheckBox>
+                        
                     </DataGridTemplateColumn.Header>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -59,7 +87,7 @@
 
                 <DataGridTextColumn Header="File" Binding="{Binding Path}" Width="*"/>
             </DataGrid.Columns>
-        </DataGrid>
+        </DataGrid>-->
             
         <Button Grid.Row="2" Name="btnNext" Width="120" FontSize="18" FontWeight="Bold" HorizontalAlignment="Right" Margin="0,10,10,10" Click="btnNext_Click">Next</Button>
 
