Support for bulk deletion of favorites and DMs
Version 5.0:
+ Support for deleting favorites and Direct Messages in bulk: Query
twitter + Delete
+ Bug fix crash when using malformed regex
+ Using Xceed datagrid for better UX: Group by month collapse/expand,
directly jump to a given month, select/unselect all tweets in a given
month...

--- a/ArchiveFiles.xaml
+++ b/ArchiveFiles.xaml
@@ -26,7 +26,7 @@
                 </TextBlock>
             </StackPanel>
             <StackPanel Margin="0" Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Name="btnAddFiles" Padding="25 5" FontSize="26" Click="btnAddFiles_Click"
+                <Button Name="btnAddFiles" Padding="25 3 25 5" FontSize="26" Click="btnAddFiles_Click"
                         ToolTip="You can add multiple *.zip archive files or *.js files">Load/add Twitter archive files</Button>
             </StackPanel>
             </StackPanel>
