--- a/Information.xaml
+++ b/Information.xaml
@@ -1,18 +1,19 @@
 ﻿<Window x:Class="Twitter_Archive_Eraser.Information"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Twitter Archive Eraser" Height="264.436" Width="574.06" ResizeMode="NoResize" ShowInTaskbar="False">
+        Title="Twitter Archive Eraser" Height="292.436" Width="574.06" ResizeMode="NoResize" ShowInTaskbar="False">
     <Grid Margin="10">
         <StackPanel>
             <TextBlock FontWeight="Bold" FontSize="14" TextWrapping="Wrap">Twitter Archive Eraser stores online the following information for statistical purposes:</TextBlock>
             <StackPanel Margin="20 5">
                 <TextBlock>- Your Twitter username</TextBlock>
-                <TextBlock>- Number of tweets deleted/number of errors while deleting etc.</TextBlock>
+                <TextBlock>- Number of tweets, favorites or DMs deleted/number of errors while deleting etc.</TextBlock>
                 <TextBlock>- List of the months/years of the deleted tweets</TextBlock>
                 <TextBlock>- List of filter expressions used</TextBlock>
             </StackPanel>
 
-            <TextBlock Margin="0 10 0 0" FontWeight="Bold">Twitter Archive Eraser CANNOT access to your password or direct messages</TextBlock>
+            <TextBlock Margin="0 10 0 0" FontWeight="Bold">Twitter Archive Eraser CANNOT access to your password</TextBlock>
+            <TextBlock Margin="0 10 0 0" FontWeight="Bold" TextWrapping="Wrap">Twitter Archive Eraser CANNOT access to your direct messages unless you explicitly grant it access if you choose to delete DMs</TextBlock>
             <TextBlock Margin="0 10 0 0" FontWeight="Bold">Twitter Archive Eraser WILL NEVER share the above information</TextBlock>            
             
             <Button Name="btnOK" HorizontalAlignment="Right" Width="64" Margin="0 10 10 0" Height="23" Click="btnOK_Click">OK</Button>
