--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Twitter_Archive_Eraser.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Twitter Archive Eraser" Height="444.572" Width="835.526" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Twitter Archive Eraser" Height="421" Width="860" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid Margin="10 10 10 0">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -10,9 +10,10 @@
         
         <StackPanel Margin="20 20 20 0" Grid.Row="0">
             <TextBlock FontSize="36" >Step 1</TextBlock>
-            <TextBlock FontSize="20" HorizontalAlignment="Center" TextWrapping="Wrap" TextAlignment="Center">
-                After you authorize this application, Twitter will give you a 7-digit PIN Number.</TextBlock>
-            <StackPanel Margin="39 10">
+            <TextBlock FontSize="20" HorizontalAlignment="Left" TextWrapping="Wrap" Margin="40 10 0 0">
+                Authenticate your twitter account using Twitter's PIN access code.
+            </TextBlock>
+            <StackPanel Margin="40 10">
                 <TextBlock TextWrapping="Wrap">
                     Twitter Archive Eraser will store some information for statistical purposes, including your user name and the number of tweets you have deleted.
                 </TextBlock>
@@ -23,28 +24,95 @@
                         Click here for the full list of information you need to share with Twitter Archive Eraser.
                     </Hyperlink>
                 </TextBlock>
-                <CheckBox Name="chkAcceptToShare" Margin="0 5" Click="AcceptToShare_Click">I accept to share the above information with Twitter Archive Eraser.</CheckBox>
+                <CheckBox Name="chkAcceptToShare" Margin="0 5" Click="AcceptToShare_Click" FontWeight="Bold">I accept to share the above information with Twitter Archive Eraser.</CheckBox>
 
             </StackPanel>
-            <Button Name="btnAuthorize" 
-                    Margin="0 30" 
-                    Height="65" 
-                    Width="330" 
-                    FontWeight="Bold" 
-                    FontSize="20" 
-                    IsEnabled="False"
-                    Click="btnAuthorize_Click">
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <Image Name="imgTwitterAuth" Source="pack://application:,,,/Twitter Archive Eraser;component/Twitter-256-authorize.png"/>
-                    <TextBlock Margin="5 10 0 0" FontSize="28" FontWeight="Normal">Sign In</TextBlock>
+            
+            <Grid>
+                <StackPanel Name="stackAuthorize" Visibility="Visible">
+                    <Button 
+                        VerticalAlignment="Top"
+                        HorizontalAlignment="Center"
+                        Margin="0 20 0 5"
+                        Visibility="Visible"
+                        Name="btnAuthorize" 
+                        Height="65" 
+                        Padding="80 0 100 0"
+                        FontWeight="Bold" 
+                        FontSize="20" 
+                        IsEnabled="False"
+                        Click="btnAuthorize_Click">
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                <Image Name="imgTwitterAuth" Source="pack://application:,,,/Twitter Archive Eraser;component/Twitter-256-authorize.png"/>
+                                <TextBlock Margin="5 10 0 0" FontSize="28" FontWeight="Normal">Sign In</TextBlock>
+                            </StackPanel>
+                    </Button>
+                    
+                    <CheckBox Name="chkDeleteDm" 
+                              HorizontalAlignment="Center" 
+                              Click="chkDeleteDm_Click"
+                              ToolTip="Check this if you want to delete DMs, otherwise, you can sign in without DM access permissions">
+                        I want to delete DMs
+                    </CheckBox>
                 </StackPanel>
                 
-            </Button>
-            <StackPanel Orientation="Horizontal" Margin="10" x:Name="stackWelcome" Visibility="Hidden">
-                <TextBlock FontSize="18"><Run Text="Welcome"/></TextBlock>
-                <TextBlock x:Name="userName" FontSize="18" Margin="10 0" FontWeight="Bold"><Run Text="@martani_net"/></TextBlock>
-                <Button x:Name="btnNext" Width="120" FontSize="18" Margin="400 0" Height="40" Click="btnNext_Click" Content="Next"/>
-            </StackPanel>
+                
+                <StackPanel x:Name="stackWelcome" Visibility="Hidden">
+                    <StackPanel Orientation="Horizontal" Margin="10 10 0 5">
+                        <TextBlock FontSize="18"><Run Text="Welcome"/></TextBlock>
+                        <TextBlock x:Name="userName" FontSize="18" Margin="10 0 5 0" FontWeight="Bold"><Run Text="@martani_net."/></TextBlock>
+                        <TextBlock FontSize="18"><Run Text="Please choose an option below:"/></TextBlock>
+                    </StackPanel>
+
+                    <StackPanel Margin="20 0">
+                        <Button Name="btnRemoveTweets"
+                            HorizontalAlignment="Center"
+                            Height="50" 
+                            Padding="40 0 50 0" 
+                            FontWeight="Bold" 
+                            FontSize="20" 
+                            IsEnabled="True"
+                            Click="btnNext_Click">
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                <Image Name="imgTwitterAuth1" Source="pack://application:,,,/Twitter Archive Eraser;component/Twitter-256-authorize.png"/>
+                                <TextBlock Margin="5 3 0 0" FontSize="28" FontWeight="Normal">Delete Tweets</TextBlock>
+                            </StackPanel>
+                        </Button>
+                    
+                        <Grid Width="545">
+                            <Button Name="btnRemoveFavorites"
+                                HorizontalAlignment="Left"
+                                Height="30" 
+                                Width="260"
+                                Margin=" 0 5"
+                                FontWeight="Bold" 
+                                FontSize="20" 
+                                IsEnabled="True"
+                                Click="btnRemoveFavorites_Click">
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                    <Image Name="imgTwitterAuth2" Source="pack://application:,,,/Twitter Archive Eraser;component/favorite-icon.png"/>
+                                    <TextBlock Margin="5 -2 0 0" FontWeight="Normal">Delete Favorites</TextBlock>
+                                </StackPanel>
+                            </Button>
+
+                            <Button Name="btnRemoveDM"
+                                    IsEnabled="False"
+                                HorizontalAlignment="Right"
+                                Height="30"
+                                    Width="260"
+                                Margin=" 0 5"
+                                FontWeight="Bold" 
+                                FontSize="20" 
+                                Click="btnRemoveDM_Click">
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                    <Image Name="imgTwitterAuth3" Margin="2" Source="pack://application:,,,/Twitter Archive Eraser;component/dm-icon.png"/>
+                                    <TextBlock Margin="5 -2 0 0" FontWeight="Normal">Delete Direct Messages</TextBlock>
+                                </StackPanel>
+                            </Button>
+                        </Grid>
+                    </StackPanel>
+                </StackPanel>
+            </Grid>
         </StackPanel>
         <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Grid.Row="1">
             <Image Source="pack://application:,,,/Twitter Archive Eraser;component/Twitter-256.png" Name="imgTwitterGray"/>
