--- a/SendTweet.xaml
+++ b/SendTweet.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Twitter_Archive_Eraser.SendTweet"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Twitter Archive Eraser" Height="340" Width="702" ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterScreen"
+        Title="Twitter Archive Eraser" Height="383" Width="702" ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterScreen"
         x:Name="winSendTweet" Closing="Window_Closing">
     <Window.Triggers>
         <EventTrigger RoutedEvent="Window.Loaded">
@@ -27,7 +27,7 @@
                                   Storyboard.TargetProperty="(Window.Opacity)"
                                   From="1.0"
                                   To="0.0"
-                                  Duration="0:0:1"
+                                  Duration="0:0:0.200"
                                   AutoReverse="False"
                                   RepeatBehavior="1x" />
                 </Storyboard>
@@ -37,23 +37,33 @@
     <Grid Margin="10">
         <StackPanel>
             <TextBlock FontSize="32" HorizontalAlignment="Center" Foreground="#FF03760D">Done! Everything is clean ;)</TextBlock>
-            <TextBlock FontSize="18" Margin="0 30 0 5">Share the love? Tweet this:</TextBlock>
-            <Border BorderThickness="1" BorderBrush="#FF0B5BE8" Margin="5">
-                <TextBlock Name="txtTweetText" Margin="10" FontSize="20" TextWrapping="Wrap">Just deleted {0} tweets using Twitter Archive Eraser. Check it out here http://martani.github.io/Twitter-Archive-Eraser/</TextBlock>
+            <TextBlock FontSize="18" Margin="0 30 0 5">Share the love? Tweet this to your followers:</TextBlock>
+            <Border BorderThickness="0" BorderBrush="#FF0B5BE8" Margin="5">
+                <TextBox Name="txtTweetText" Margin="0" Padding="0 5" FontSize="20" TextWrapping="Wrap">Just deleted {0} tweets using Twitter Archive Eraser (XX mins &amp; YY seconds). Check it out here http://martani.github.io/Twitter-Archive-Eraser/</TextBox>
             </Border>
 
+            <StackPanel>
             <Button Name="btnSendTweet" 
-                    Margin="173,10,169,10" 
+                    HorizontalAlignment="Center"
                     Height="52" 
                     FontWeight="Bold" 
                     IsEnabled="True"
-                    Click="btnSendTweet_Click">
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <Image Name="imgTwitterAuth" Source="pack://application:,,,/Twitter Archive Eraser;component/Twitter-256-authorize.png"/>
-                    <TextBlock Margin="5 10 0 0" FontSize="20" FontWeight="Normal">Send Tweet</TextBlock>
-                </StackPanel>
-
-            </Button>
+                    Click="btnSendTweet_Click" Margin="0 10 0 0" Padding="20 0 50 0">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                        <Image Name="imgTwitterAuth" Source="pack://application:,,,/Twitter Archive Eraser;component/Twitter-256-authorize.png"/>
+                        <TextBlock Name="btnSendTweetInnerText" Margin="5 10 0 0" FontSize="20" FontWeight="Normal">Send tweet</TextBlock>
+                    </StackPanel>
+                </Button>
+                
+                <Button Name="btnNo" 
+                    Margin="0,10,0,10" 
+                    Height="28" 
+                    FontWeight="Bold" 
+                    IsEnabled="True"
+                    Click="btnNo_Click"  Width="108" Opacity="0.5" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}">
+                    No thanks
+                </Button>
+            </StackPanel>
 
             <TextBlock Name="txtTweetUpdateStatus" FontSize="16" HorizontalAlignment="Center"></TextBlock>
         </StackPanel>
